tests-integration/tests/snapshots/resolving__002_import_resolution_library.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Library

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - MkHideTy
  - Ctor3
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor2
  - hideMe

Exported Types:
  - LibTy
  - MultiTy
  - TypeOnly
  - HideTy

Local Terms:
  - MkHideTy
  - Ctor3
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor2
  - hideMe

Local Types:
  - LibTy
  - MultiTy
  - TypeOnly
  - HideTy

Errors:
