tests-integration/tests/snapshots/resolving__002_import_resolution_library_explicit.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module LibraryExplicit

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - Id

Exported Types:
  - Hidden
  - Id

Local Terms:
  - Hidden
  - Id

Local Types:
  - Hidden
  - Id

Errors:
