tests-integration/tests/snapshots/resolving__003_import_errors_duplicate_qualified_import.snap
---
source: tests-integration/tests/resolving.rs
expression: report
---
module DuplicateQualifiedImport

Unqualified Imports:

Qualified Imports:

Library Terms:
  - html is Implicit

Library Types:
  - Css is Implicit
  - Html is Implicit

Exported Terms:

Exported Types:

Local Terms:

Local Types:

Errors:
  - TermImportConflict { existing: (Idx::<File>(14), Idx::<TermItem>(0), AstId<syntax::cst::ImportStatement>(9)), duplicate: (Idx::<File>(13), Idx::<TermItem>(0), AstId<syntax::cst::ImportStatement>(5)) }
  - TypeImportConflict { existing: (Idx::<File>(14), Idx::<TypeItem>(0), AstId<syntax::cst::ImportStatement>(9)), duplicate: (Idx::<File>(13), Idx::<TypeItem>(0), AstId<syntax::cst::ImportStatement>(5)) }
