tests-integration/tests/snapshots/resolving__003_import_errors_invalid_constructor.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module InvalidConstructor

Unqualified Imports:

Qualified Imports:

Exported Terms:

Exported Types:
  - Invalid

Local Terms:

Local Types:
  - Invalid

Errors:
