tests-integration/tests/snapshots/resolving__003_import_errors_library_a.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module LibraryA

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - html

Exported Types:
  - Css
  - Html

Local Terms:
  - html

Local Types:
  - Css
  - Html

Errors:
