tests-integration/tests/snapshots/resolving__004_import_re_exported_constructor_internal.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Internal

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - Internal

Exported Types:
  - Internal

Local Terms:
  - Internal

Local Types:
  - Internal

Errors:
