tests-integration/tests/snapshots/resolving__004_import_re_exported_constructor_main.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Main

Unqualified Imports:

Terms:
  - Internal is Explicit

Types:
  - Internal is Explicit

Qualified Imports:

Exported Terms:
  - internal

Exported Types:

Local Terms:
  - internal

Local Types:

Errors:
